Mudança em objetos e rotas da api
