# src/main/java/br/com/devio/entrypoint/resource/CalculatorResource.java
@@ -1,22 +1,20 @@
 package br.com.devio.entrypoint.resource;
 
-import br.com.devio.entrypoint.command.ServiceCommand;
-import br.com.devio.generated.api.CalculatorApi;
-import br.com.devio.generated.dto.LoanCalculatorRequestDTO;
-import br.com.devio.generated.dto.LoanCalculatorResponseDTO;
+import br.com.devio.domain.service.CalculatorService;
+import br.com.devio.generated.api.SimulationsApi;
+import br.com.devio.generated.dto.SimulationRequestDTO;
+import br.com.devio.generated.dto.SimulationResponseDTO;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
-import jakarta.ws.rs.core.Response;
 
 @ApplicationScoped
-public class CalculatorResource implements CalculatorApi {
+public class CalculatorResource implements SimulationsApi {
 
     @Inject
-    ServiceCommand<LoanCalculatorRequestDTO, LoanCalculatorResponseDTO> calculatorCommand;
+    CalculatorService simulationService;
 
     @Override
-    public Response calculateLoan(LoanCalculatorRequestDTO request) {
-        LoanCalculatorResponseDTO response = calculatorCommand.execute(request);
-        return Response.ok(response).build();
+    public SimulationResponseDTO simulateLoan(SimulationRequestDTO request) {
+        return simulationService.executeSimulation(request);
     }
 }
